# egui_graph

./: Cargo.toml  LICENSE-MIT
.github/workflows/: ci.yml
examples/: bevy_demo.rs  demo-new.rs  demo.rs  test.rs
src/: bezier.rs  edge.rs  graph.rs  layout.rs  lib.rs  node.rs
