[package]
name = "egui_graph"
version = "0.3.0"
edition = "2021"
description = "A general-purpose node graph widget for egui."
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"

# Required for wgpu v0.10 feature resolution.
resolver = "2"

[dependencies]
egui = { version = "0.23.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
petgraph = "0.6"

[features]
default = ["serde"]
serde = ["egui/serde", "dep:serde"]
