[package]
name = "egui_graph"
version = "0.3.0"
edition = "2021"
description = "A general-purpose node graph widget for egui."
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"

# Required for wgpu v0.10 feature resolution.
resolver = "2"

[dependencies]
egui = { version = "0.28.1", default-features = false, optional = true }
layout-rs = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
eframe = "0.28.1"
env_logger = "0.11"
petgraph = "0.6"

[features]
default = ["layout", "serde"]
layout = ["layout-rs"]
serde = ["egui/serde", "dep:serde"]
